[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/DeadImage/Picture_Part1.png" type="Texture" id=1]
[ext_resource path="res://Assets/DeadImage/Picture_Part2.png" type="Texture" id=2]
[ext_resource path="res://Assets/DeadImage/Picture_Part3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Furneture/PicturePieces/PicturePiece_Script.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 280, 320 )

[node name="PicturePiece" type="Area2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 4 )
MoveMotion = 0.5

[node name="Part1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Part2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Part3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_PicturePiece_body_entered"]
